--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,7 +71,7 @@
             <div class="d-flex flex-row justify-content-evenly px-5 me-0">
                 {% if general_data.footer_logo_url %}
                 <div class="col-4 d-flex justify-content-center">
-                    <div class="col-12  col-xl-7">
+                    <div class="col-12  col-xl-8">
                         <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}"/>
                     </div>
                 </div>
@@ -80,8 +80,8 @@
                 {{ general_data.address.address }}
                 {% endif %}
                 <div class="col- d-flex justify-content-center">
-                    <div class="d-flex justify-content-center col-9 ">
-                        <h6 class=" text-primary col-10 col-lg-12 col-xl-11 fs-1">
+                    <div class="d-flex justify-content-center col-9 col-lg-10 col-xl-12">
+                        <h6 class="  d-flex text-primary col-10 col-lg-10 col-xl-8 fs-2">
                             VETERAN OWNED 20 YEARS EXPERIENCE
                         </h6>
                     </div>
