--- a/_includes/header_2.html
+++ b/_includes/header_2.html
@@ -105,12 +105,12 @@
                 <a class=" nav-link " href="/legal-services">LEGAL SERVICES</a>
                 <a class="nav-link index-info-color dropdown-toggle dropdown-center"  href="#" id="legalDropDown1" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                 <ul class="dropdown-menu fs-5 border-0 px-3 py-2 bg-white">
-                    <li><a class="dropdown-item text-uppercase " href="/criminal-law">criminal law</a></li>
-                    <li><a class="dropdown-item text-uppercase " href="/personal-injury">personal injury</a></li>
-                    <li><a class="dropdown-item text-uppercase " href="/dwi-owi">dwi/owi</a></li>
-                    <li><a class="dropdown-item text-uppercase " href="/estate-planning">estate planning</a></li>
-                    <li><a class="dropdown-item text-uppercase " href="/family-law">family law</a></li>
-                    <li><a class="dropdown-item text-uppercase " href="/additional-services">additional services</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/criminal-law">criminal law</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/personal-injury">personal injury</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/dwi-owi">dwi/owi</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/estate-planning">estate planning</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/family-law">family law</a></li>
+                    <li><a class="dropdown-item text-uppercase f-weight-500" href="/additional-services">additional services</a></li>
                 </ul>
             </li>
             <li class="nav-item mx-xl-4 mx-3">
