Final Revisions WIP

--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -329,3 +329,6 @@ max-height: 25%;
     -webkit-columns: 2;
     -moz-columns: 2;
 }
+.index-tabs-no-bold {
+    font-weight: normal !important;
+}
