--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,30 +39,34 @@
 <!--        <div class="menu__LinkContainer"><a class="menuLink menuLink&#45;&#45;Top menuLink&#45;&#45;mobile" href="/contact.html">Contact</a><a class="menuLink menuLink&#45;&#45;Top menuLink&#45;&#45;Desk" href="/contact.html">Contact</a></div>-->
 <!--    </div>-->
 <!--</section>-->
-<nav class="d-lg-block d-none navbar navbar-expand-lg bg-primary z-3 py-5 ">
-    {% assign general_data = site.data.general_settings %}
-    <div class="container-fluid">
-        <div class=" d-flex justify-content-center col-5 ">
-            <a class="navbar-brand" href="/">
-                <img id="nav-logo" class="d-block h-auto py-0 px-0 menu__Logo menu__Logo--Text img-fluid" alt="logo"
-                     src="{{ general_data.site_logo_url }}">
-            </a>
+
+<section class="  d-lg-flex d-none col-12 justify-content-between">
+    <nav class="    navbar navbar-expand-lg bg-primary col-6 z-3 py-5">
+        {% assign general_data = site.data.general_settings %}
+        <div class="d-flex col-12 justify-content-end">
+            <div class="d-flex justify-content-center col-5  ">
+                <a class="navbar-brand me-5" href="/">
+                    <img id="nav-logo" class="d-flex h-auto py-0 px-0 menu__Logo menu__Logo--Text img-fluid" alt="logo"
+                         src="{{ general_data.site_logo_url }}">
+                </a>
+            </div>
         </div>
-<!--        <div class="col-5 row ">-->
-            <ul class="navbar-nav fs-2 px-lg-3 px-xl-0">
-                <li class="nav-item mx-xl-4 mx-3">
-                    <a class="nav-link menu-link text-white active" aria-current="page" href="/">Home</a>
+    </nav>
+    <div class="d-flex h-25">
+            <ul class="d-flex flex-row navbar-nav h-25 fs-2 px-lg-3 px-xl-0 ">
+                <li class="nav-item mx-xl-4 mx-3 ">
+                    <a class="nav-link menu-link text-white active index-tabs-no-bold" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown mx-xl-4 mx-3 d-flex">
                     <a class="nav-link text-white" href="/legal-services">LEGAL SERVICES</a>
-                    <a class="nav-link text-white dropdown-toggle dropdown-center " href="#" id="legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-                    <ul class="dropdown-menu fs-3 border-0 px-3 py-2 bg-transparent">
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/criminal-law">criminal law</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/personal-injury">personal injury</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/dwi-owi">dwi/owi</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/estate-planning">estate planning</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/family-law">family law</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500" href="/additional-services">additional services</a></li>
+                    <a class="nav-link text-white dropdown-toggle dropdown-center" href="#" id="legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+                    <ul class="dropdown-menu dropdown-menu-end fs-3 border-0 px-3 py-3 bg-transparent index-tabs-no-bold">
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/criminal-law">criminal law</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/personal-injury">personal injury</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/dwi-owi">dwi/owi</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/estate-planning">estate planning</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/family-law">family law</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item f-weight-500 " href="/additional-services">additional services</a></li>
                     </ul>
                 </li>
                 <li class="nav-item mx-xl-4 mx-3">
@@ -72,9 +76,8 @@
                     <a class="nav-link text-white" href="/contact">CONTACT</a>
                 </li>
             </ul>
-<!--        </div>-->
     </div>
-</nav>
+</section>
 <div class="d-block d-lg-none bg-secondary">
     <nav class="navbar navbar-expand-lg bg-secondary z-3 py-4">
         {% assign general_data = site.data.general_settings %}
