--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,14 +1,24 @@
 <form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm px-5">
+	<script src="https://www.google.com/recaptcha/api.js?=render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
+	<script>
+		grecaptcha.ready(function() {
+			grecaptcha.execute('6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo', {action: 'submit'}).then(function (token) {
+				console.info("got token: " + token);
+				document.getElementById('g-recaptcha-response').value = token;
+			});
+		});
+	</script>
 	<div class="formFlex px-2">
 		<div class="formSmallInputs inputWrapper">
-			<input class=" my-4" name="NAME" type="text" placeholder="NAME" />
-			<input class="my-4" name="EMAIL" type="text" placeholder="EMAIL" />
-			<input class="my-4" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
+			<input class="my-4" name="NAME" type="text" placeholder="NAME" required />
+			<input class="my-4" name="EMAIL" type="email" placeholder="EMAIL" required />
+			<input class="my-4" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" required />
 		</div>
-		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge my-4" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
+		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge my-4" name="MESSAGE" placeholder="MESSAGE" required></textarea></div>
 
 	</div>
 	<div class="d-flex align-items-end px-2">
+		<input class="g-recaptcha-response" name="g-recaptcha-response" type="hidden">
 		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3 px-2" value="submit" />
 	</div>
 	</form>
