--- a/_includes/header_2.html
+++ b/_includes/header_2.html
@@ -127,7 +127,7 @@
 
 <nav class="d-lg-block d-block navbar navbar-expand-lg bg-white z-3 py-5 w-100 z-3 position-fixed top-0 w-100">
     {% assign general_data = site.data.general_settings %}
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-end px-4">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#homeNavHamburgerContent" aria-controls="homeNavHamburgerContent" aria-expanded="false" aria-label="Toggle nav" style="color: transparent; border-color: transparent;">
             <span class="fa-stack d-md-none">
                 <i class="fa fa-circle fa-stack-1x fa-3x"></i>
