--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,16 +62,6 @@
             </div>
         </div>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
-        <script src="/assets/js/main.js"></script>
-        <script>
-            var navbarToggler = document.getElementById('navbar-toggler');
-            var logo = document.getElementById('logo');
-
-            navbarToggler.addEventListener('click', function() {
-                var menuShown = document.getElementById('homeNavHamburgerContent').classList.contains('show');
-                logo.classList.toggle('d-none', menuShown);
-            });
-        </script>
-
+        <script src="/assets/js/main.js" defer></script>
     </body>
 </html>
