--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,13 +79,23 @@
     </div>
 </section>
 
+<!--<script>-->
+
+<!--    var myCollapsible = document.getElementById('navbar-toggler1')-->
+<!--    myCollapsible.addEventListener('click', function () {-->
+<!--        var bsCollapse = new bootstrap.Collapse(myCollapsible, {-->
+<!--            toggle: false-->
+<!--        })-->
+<!--    })-->
+<!--</script>-->
+
 <!--MOBILE INDEX NAV STARTS HERE-->
 
 <div class="d-block d-lg-none bg-secondary">
     <nav class="navbar navbar-expand-lg bg-secondary z-3 py-4">
         {% assign general_data = site.data.general_settings %}
         <div class="container-fluid justify-content-end px-3">
-            <button class="navbar-toggler bg-secondary" id="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#homeNavHamburgerContent" aria-controls="homeNavHamburgerContent" aria-expanded="false" aria-label="Toggle nav" style="color: transparent; border-color: transparent;">
+            <button class="navbar-toggler bg-secondary" id="navbar-toggler1" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-controls="homeNavHamburgerContent" aria-expanded="false" aria-label="Toggle nav" style="color: transparent; border-color: transparent;">
                 <span class="fa-stack d-md-none">
                     <i class="fa fa-circle fa-stack-1x icon-under fa-3x"></i>
                     <i class="fa fa-solid fa-bars fa-stack-1x fa-3x icon-over"></i>
@@ -98,7 +108,7 @@
         </div>
     </nav>
     <div>
-        <div class="collapse navbar-collapse" id="homeNavHamburgerContent" data-bs-theme="red">
+        <div class="multi-collapse collapse navbar-collapse" id="homeNavHamburgerContent" data-bs-theme="red">
             <div class="p-2 ">
                 <ul class="navbar-nav text-white fs-2 grid gap-0 ">
                     <li class="nav-item g-col-12">
@@ -124,10 +134,10 @@
                 </ul>
             </div>
         </div>
-        <div class="col-12 d-flex justify-content-center pb-4" id="logo">
-            <div class="col-10 col-md-5  d-flex position-relative z">
-                <a href="/">
-                    <img alt="logo" class="img-fluid " src="/assets/images/white_logo.png?_cchid=b90a170187e3c754830a1ce083cb9b17">
+        <div class="col-12 d-flex justify-content-center pb-4 ">
+            <div class="col-10 col-md-5 d-flex">
+                <a href="/" class="multi-collapse collapse show">
+                    <img alt="logo" class="img-fluid" src="/assets/images/white_logo.png?_cchid=b90a170187e3c754830a1ce083cb9b17">
                 </a>
             </div>
         </div>
