Footer/ subpages bugfixing, added about me button for mccormick area on index.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         {% endif %}
-        <div class="px-4 d-flex row d-lg-none justify-content-md-around justify-content-start">
+        <div class="px-4 d-flex row d-lg-none justify-content-md-around justify-content-start mx-0">
             <div class="py-4 d-grid col-10">
                 {% if general_data.address %}
                 {{ general_data.address.address }}
