Updated 4 files via CloudCannon.

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -63,9 +63,9 @@
 						</div>
 						{% endif %}
 						<div class="col-xl-12 col-12 d-flex justify-content-xl-around ">
+						  <script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 							<form action="https://formspree.io/f/mkndnqlr" method="POST"
 								  class="d-flex flex-column flex-lg-row align-content-center justify-content-md-start cfForm col-lg-12 col-xl-12 pt-5 col-12 justify-content-lg-between">
-								<script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 							  	<script>
 									grecaptcha.ready(function() {
 										grecaptcha.execute('6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo', {action: 'submit'}).then(function (token) {
@@ -93,12 +93,13 @@
 											<textarea type="text" class="p-0 fs-4 p-3 pb-xl-5" id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" required></textarea>
 										</div>
 										<input class="g-recaptcha-response" name="g-recaptcha-response" type="hidden">
-										<input type="submit" class="d-block d-lg-flex ms-lg-auto text-uppercase px-4 py-3 fs-4" value="submit" />
+										<input type="submit" class="d-block d-lg-flex ms-lg-auto text-uppercase px-4 py-3 fs-4" value="Submit" />
 									</div>
 								</div>
 							</form>
 						</div>
 					</div>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 				</div>
 			</section>
 		</div>
