--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,5 +1,5 @@
+<script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 <form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm px-5">
-	<script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo"></script>
 	<script>
 		grecaptcha.ready(function() {
 			grecaptcha.execute('6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo', {action: 'submit'}).then(function (token) {
@@ -19,6 +19,7 @@
 	</div>
 	<div class="d-flex align-items-end px-2">
 		<input class="g-recaptcha-response" name="g-recaptcha-response" type="hidden">
-		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3 px-2" value="submit" />
+		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3 px-2" value="Submit" />
 	</div>
 	</form>
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
